@@ -26,12 +26,12 @@ import static org.openqa.selenium.remote.http.Contents.asJson;
 import static org.openqa.selenium.remote.http.Route.get;
 
 import com.google.auto.service.AutoService;
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import java.io.Closeable;
 import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.util.Collections;
+import java.util.Map;
 import java.util.Set;
 import java.util.logging.Level;
 import java.util.logging.Logger;
@@ -100,9 +100,9 @@ public class SessionMapServer extends TemplateGridServerCommand {
                                 .addHeader("Content-Type", JSON_UTF_8)
                                 .setContent(
                                     asJson(
-                                        ImmutableMap.of(
+                                        Map.of(
                                             "value",
-                                            ImmutableMap.of(
+                                            Map.of(
                                                 "ready",
                                                 true,
                                                 "message",
