@@ -34,7 +34,6 @@ import static org.openqa.selenium.firefox.FirefoxOptions.FIREFOX_OPTIONS;
 import static org.openqa.selenium.remote.CapabilityType.ACCEPT_INSECURE_CERTS;
 import static org.openqa.selenium.remote.CapabilityType.PAGE_LOAD_STRATEGY;
 
-import com.google.common.collect.ImmutableMap;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Paths;
@@ -69,8 +68,7 @@ class FirefoxOptionsTest {
   @Test
   void canInitFirefoxOptionsWithCapabilitiesThatContainFirefoxOptionsAsMap() {
     FirefoxProfile profile = new FirefoxProfile();
-    Capabilities caps =
-        new ImmutableCapabilities(FIREFOX_OPTIONS, ImmutableMap.of("profile", profile));
+    Capabilities caps = new ImmutableCapabilities(FIREFOX_OPTIONS, Map.of("profile", profile));
 
     FirefoxOptions options = new FirefoxOptions(caps);
 
