@@ -22,18 +22,13 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.openqa.selenium.grid.data.Availability.UP;
 
 import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import java.io.UncheckedIOException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.time.Duration;
 import java.time.Instant;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Random;
-import java.util.Set;
-import java.util.UUID;
+import java.util.*;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.openqa.selenium.Capabilities;
@@ -46,10 +41,6 @@ import org.openqa.selenium.grid.data.NodeStatus;
 import org.openqa.selenium.grid.data.Session;
 import org.openqa.selenium.grid.data.Slot;
 import org.openqa.selenium.grid.data.SlotId;
-import org.openqa.selenium.grid.node.Node;
-import org.openqa.selenium.grid.node.local.LocalNode;
-import org.openqa.selenium.grid.security.Secret;
-import org.openqa.selenium.grid.testing.TestSessionFactory;
 import org.openqa.selenium.remote.SessionId;
 import org.openqa.selenium.remote.http.HttpHandler;
 import org.openqa.selenium.remote.http.HttpRequest;
@@ -156,12 +147,12 @@ class GreedySlotSelectorTest {
 
     NodeStatus oldVersionHighUtil =
         createNodeWithStereotypes(
-            ImmutableList.of(ImmutableMap.of("browserName", "chrome", "browserVersion", "120.1")),
+            List.of(Map.of("browserName", "chrome", "browserVersion", "120.1")),
             10,
             8); // 80% utilized
     NodeStatus newVersionLowUtil =
         createNodeWithStereotypes(
-            ImmutableList.of(ImmutableMap.of("browserName", "chrome", "browserVersion", "120.0")),
+            ImmutableList.of(Map.of("browserName", "chrome", "browserVersion", "120.0")),
             10,
             2); // 20% utilized
 
@@ -182,12 +173,12 @@ class GreedySlotSelectorTest {
 
     NodeStatus windowsHighUtil =
         createNodeWithStereotypes(
-            ImmutableList.of(ImmutableMap.of("browserName", "chrome", "platformName", "WINDOWS")),
+            ImmutableList.of(Map.of("browserName", "chrome", "platformName", "WINDOWS")),
             10,
             8); // 80% utilized
     NodeStatus macLowUtil =
         createNodeWithStereotypes(
-            ImmutableList.of(ImmutableMap.of("browserName", "chrome", "platformName", "MAC")),
+            ImmutableList.of(Map.of("browserName", "chrome", "platformName", "MAC")),
             10,
             2); // 20% utilized
 
@@ -207,11 +198,11 @@ class GreedySlotSelectorTest {
 
     NodeStatus basicHighUtil =
         createNodeWithStereotypes(
-            ImmutableList.of(ImmutableMap.of("browserName", "chrome")), 10, 8); // 80% utilized
+            ImmutableList.of(Map.of("browserName", "chrome")), 10, 8); // 80% utilized
     NodeStatus advancedLowUtil =
         createNodeWithStereotypes(
             ImmutableList.of(
-                ImmutableMap.of(
+                Map.of(
                     "browserName", "chrome",
                     "platformName", "MAC",
                     "se:recordVideo", true)),
@@ -266,28 +257,14 @@ class GreedySlotSelectorTest {
         Duration.ofSeconds(10),
         Duration.ofSeconds(300),
         "4.0.0",
-        ImmutableMap.of(
+        Map.of(
             "name", "Max OS X",
             "arch", "x86_64",
             "version", "10.15.7"));
   }
 
-  private NodeStatus createNodeWithStereotypes(List<ImmutableMap> stereotypes) {
-    URI uri = createUri();
-    LocalNode.Builder nodeBuilder =
-        LocalNode.builder(tracer, bus, uri, uri, new Secret("cornish yarg"));
-    nodeBuilder.maximumConcurrentSessions(stereotypes.size());
-    stereotypes.forEach(
-        stereotype -> {
-          Capabilities caps = new ImmutableCapabilities(stereotype);
-          nodeBuilder.add(caps, new TestSessionFactory((id, c) -> new Handler(c)));
-        });
-    Node myNode = nodeBuilder.build();
-    return myNode.getStatus();
-  }
-
   private NodeStatus createNodeWithStereotypes(
-      List<ImmutableMap> stereotypes, int count, int currentLoad) {
+      List<Map<?, ?>> stereotypes, int count, int currentLoad) {
     NodeId nodeId = new NodeId(UUID.randomUUID());
     URI uri = createUri();
 
@@ -319,7 +296,7 @@ class GreedySlotSelectorTest {
         Duration.ofSeconds(10),
         Duration.ofSeconds(300),
         "4.0.0",
-        ImmutableMap.of(
+        Map.of(
             "name", "Max OS X",
             "arch", "x86_64",
             "version", "10.15.7"));
