@@ -24,7 +24,6 @@ import static org.openqa.selenium.remote.http.HttpMethod.GET;
 import static org.openqa.selenium.support.ui.ExpectedConditions.*;
 import static org.openqa.selenium.testing.Safely.safelyCall;
 
-import com.google.common.collect.ImmutableMap;
 import java.time.Duration;
 import java.util.Collections;
 import java.util.List;
@@ -105,9 +104,9 @@ class OverallGridTest extends JupiterTestBase {
     Config config =
         new MemoizedConfig(
             new MapConfig(
-                ImmutableMap.of(
+                Map.of(
                     "server", Collections.singletonMap("port", port),
-                    "node", ImmutableMap.of("detect-drivers", true, "selenium-manager", true))));
+                    "node", Map.of("detect-drivers", true, "selenium-manager", true))));
 
     Server<?> server = new Standalone().asServer(config).start();
 
