@@ -31,7 +31,6 @@ import static org.openqa.selenium.logging.LogType.CLIENT;
 import static org.openqa.selenium.logging.LogType.DRIVER;
 import static org.openqa.selenium.logging.LogType.SERVER;
 
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSortedSet;
 import com.google.gson.JsonArray;
 import com.google.gson.JsonObject;
@@ -241,7 +240,7 @@ class JsonOutputTest {
 
     MutableCapabilities caps = new DesiredCapabilities("foo", "1", Platform.LINUX);
     caps.setCapability(CapabilityType.PROXY, proxy);
-    Map<String, ?> asMap = ImmutableMap.of("desiredCapabilities", caps);
+    Map<String, ?> asMap = Map.of("desiredCapabilities", caps);
     Command command = new Command(new SessionId("empty"), DriverCommand.NEW_SESSION, asMap);
 
     String json = convert(command.getParameters());
@@ -270,7 +269,7 @@ class JsonOutputTest {
     class ToJsonReturnsMap {
       @SuppressWarnings("unused")
       public Map<String, Object> toJson() {
-        return ImmutableMap.of("cheese", "peas");
+        return Map.of("cheese", "peas");
       }
     }
 
@@ -306,7 +305,7 @@ class JsonOutputTest {
 
     Map<String, Object> value = new Json().toType(json, MAP_TYPE);
 
-    assertThat(value).isEqualTo(ImmutableMap.of("a key", "a value"));
+    assertThat(value).isEqualTo(Map.of("a key", "a value"));
   }
 
   @Test
@@ -315,7 +314,7 @@ class JsonOutputTest {
 
     Map<String, Object> value = new Json().toType(json, MAP_TYPE);
 
-    assertThat(value).isEqualTo(ImmutableMap.of("a key", "a value"));
+    assertThat(value).isEqualTo(Map.of("a key", "a value"));
   }
 
   @Test
@@ -411,7 +410,7 @@ class JsonOutputTest {
     RuntimeException clientError = new UnhandledAlertException("unhandled alert", "cheese!");
     Map<String, Object> obj = new Json().toType(new StringReader(convert(clientError)), Map.class);
     assertThat(obj).containsKey("alert");
-    assertThat(obj.get("alert")).isEqualTo(ImmutableMap.of("text", "cheese!"));
+    assertThat(obj.get("alert")).isEqualTo(Map.of("text", "cheese!"));
   }
 
   @Test
@@ -561,7 +560,7 @@ class JsonOutputTest {
   @Test
   void shouldConvertAUrlToAString() throws MalformedURLException {
     URL url = new URL("http://example.com/cheese?type=edam");
-    Map<String, URL> toConvert = ImmutableMap.of("url", url);
+    Map<String, URL> toConvert = Map.of("url", url);
 
     String seen = new Json().toJson(toConvert);
     JsonObject converted = JsonParser.parseString(seen).getAsJsonObject();
@@ -608,12 +607,12 @@ class JsonOutputTest {
     }
 
     assertThat((Object) new Json().toType(builder.toString(), MAP_TYPE))
-        .isEqualTo(ImmutableMap.of("cheese", "brie", "vegetable", "peas"));
+        .isEqualTo(Map.of("cheese", "brie", "vegetable", "peas"));
   }
 
   @Test
   void whenConvertingObjectsContainingClassesDoNotBeNoisy() {
-    String json = convert(ImmutableMap.of("thing", SimpleBean.class));
+    String json = convert(Map.of("thing", SimpleBean.class));
 
     JsonObject converted = JsonParser.parseString(json).getAsJsonObject();
 
@@ -625,9 +624,9 @@ class JsonOutputTest {
   @Test
   void canDisablePrettyPrintingToGetSingleLineOutput() {
     Map<String, Object> toEncode =
-        ImmutableMap.of(
+        Map.of(
             "ary", List.of("one", "two"),
-            "map", ImmutableMap.of("cheese", "cheddar"),
+            "map", Map.of("cheese", "cheddar"),
             "string", "This has a \nnewline in it");
 
     StringBuilder json = new StringBuilder();
@@ -649,8 +648,7 @@ class JsonOutputTest {
 
   @Test
   void shouldNotWriteOptionalFieldsThatAreEmptyInAMap() {
-    String json =
-        convert(ImmutableMap.of("there", Optional.of("cheese"), "notThere", Optional.empty()));
+    String json = convert(Map.of("there", Optional.of("cheese"), "notThere", Optional.empty()));
 
     JsonObject converted = JsonParser.parseString(json).getAsJsonObject();
 
@@ -865,7 +863,7 @@ class JsonOutputTest {
     }
 
     public Map<String, Object> asMap() {
-      return ImmutableMap.of("key", "value");
+      return Map.of("key", "value");
     }
   }
 
@@ -879,7 +877,7 @@ class JsonOutputTest {
     }
 
     public Map<String, Object> asMap() {
-      return ImmutableMap.of(key, value);
+      return Map.of(key, value);
     }
   }
 
@@ -893,7 +891,7 @@ class JsonOutputTest {
     }
 
     public Map<String, Object> toMap() {
-      return ImmutableMap.of(key, value);
+      return Map.of(key, value);
     }
   }
 }
